syntax = "proto3";
package account.v1;
option go_package = "./accountv1";

message Account {
  string account_id = 1;
}

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  Account account = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message UploadImageRequest {
  message Image {
    string filename = 1;
    string content_type = 2;
    bytes content = 3;
  }
  Image image = 1;
}

message ListAccountResponse {
  repeated string account_id = 1;
}